# intellij-community

./: .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  common.bazelrc  debugger_test_deps.MODULE.bazel
.ai/: guide.md  render-guides.mjs
.ownership/: BUILD.bazel
.ownership/monorepo-resolver/: BUILD.bazel
.ownership/runtime-resolver/: BUILD.bazel
RegExpSupport/: BUILD.bazel
RegExpSupport/resources/: intellij.regexp.xml
aether-dependency-resolver/: BUILD.bazel
android-customization/: BUILD.bazel
commandInterface/: BUILD.bazel
community-resources/: BUILD.bazel
fleet/andel/: BUILD.bazel
fleet/bifurcan/: BUILD.bazel
fleet/bundles/: BUILD.bazel
fleet/codecache/: BUILD.bazel
fleet/compiler-plugins/: BUILD.bazel
fleet/fastutil/: BUILD.bazel
fleet/kernel/: BUILD.bazel
fleet/lsp.protocol/: BUILD.bazel
fleet/multiplatform.shims/: BUILD.bazel
fleet/preferences/: BUILD.bazel
fleet/rhizomedb/: BUILD.bazel
fleet/rhizomedb.transactor/: BUILD.bazel
fleet/rhizomedb.transactor.rebase/: BUILD.bazel
fleet/rpc/: BUILD.bazel
fleet/rpc.server/: BUILD.bazel
fleet/test-runtime/: BUILD.bazel
grid/api/: BUILD.bazel
grid/core-impl/: BUILD.bazel
grid/csv/: BUILD.bazel
grid/images/: BUILD.bazel
grid/impl/: BUILD.bazel
grid/impl-ide/: BUILD.bazel
grid/json/: BUILD.bazel
grid/types/: BUILD.bazel
images/: BUILD.bazel
java/compiler/: BUILD.bazel
json/: BUILD.bazel
jupyter/: BUILD.bazel
lib/: BUILD.bazel  MODULE.bazel
python/: BUILD.bazel
spellchecker/: BUILD.bazel
updater/: BUILD.bazel
wintools/: BUILD.bazel
(+4611 files in other folders)
