http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "debugger_test_deps_debugger_agent",
    downloaded_file_path = "debugger-agent.jar",
    sha256 = "974a78a1be985706e313edb58c77794721fc54daa3f6afa825a0631ca780a2f5",
    url = "https://cache-redirector.jetbrains.com/packages.jetbrains.team/maven/p/ij/intellij-dependencies/org/jetbrains/intellij/deps/debugger-agent/1.168/debugger-agent-1.168.jar",
)
